  * Fix sentences in texts for License stanzas of debian/copyright: Add full
    stop mark after sentences.
  * Add explicit Link to versioned `/usr/share/common-licenses/GPL-1' as this 
    was added by base-files 5.8 (See #436105).
  * Fix debian/copyright text templates in t/dist/Strange-0.1 and
    t/dist/Strange-2.1.
  * Add support for perl_dbi addon for dh.

  [ Chris Butler ]
  * Fixed DhMakePerl::Utils to cope with modules in Module::CoreList where the
    version is unspecified. (Closes: #585755)

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Thu, 22 Jul 2010 15:23:42 +0200

dh-make-perl (0.68-1) unstable; urgency=low

  * make: fix a typo (DpkgList -> DpkgLists). Thanks to Dominic Hargreaves
    Closes: #580101
  * make: fix problems with --refresh
  * DpkgLists.t: do not insist that '/bin/perl' (or the corresponding regex) is
    only in perl-base. Instead, ensure that 'perl-base' is present in the
    returned list. Closes: #580025 -- FTBFS with perl-debug installed

 -- Damyan Ivanov <dmn@debian.org>  Tue, 04 May 2010 09:43:18 +0300

dh-make-perl (0.67-1) unstable; urgency=low

  [ Damyan Ivanov ]
  * documentation: drop "--" in front of the commands
  * refresh: init ->rules before ->rules->drop_quilt
  * FromCPAN: handle version relation in META dependencies. Closes: #571632
  * do not populate dependency relation if there is no version
    requirements
  * Debian::Dependency now survives being given a string with leading
    spaces
  * make: implement --recursive. Creates debian/ for missing dependencies too.
    Closes: #342751
  * FromCPAN: drop leading 'v' from versions
  * a new module, Debian:DpkgLists is used to scan dpkg's file lists as a last
    resort for finding dependencies in locally-installed packages (a-la dpkg
    -S). Closes: #478781
  * Dependency: drop Debian::Version and use Dpkg::Version instances instead
    + add (build-)dependency on libdpkg-perl